nginx-ingress-controller/3.oauth-ingress/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deploy
  namespace: app1
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
          - name: app1-config
            mountPath: "/usr/local/apache2/htdocs/"
            readOnly: true
      volumes:
        - name: app1-config
          configMap:
            name: app1-cm
            items:
              - key: "index.html"
                path: "index.html"
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: app1
  labels:
    app: app1
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: app1
  type: ClusterIP
